--- a/code/answer_analysis/greedy_accuracy.ipynb
+++ b/code/answer_analysis/greedy_accuracy.ipynb
@@ -354,7 +354,7 @@
     "\n",
     "\n",
     "acc_few_dict = {\n",
-    "    \"gpt4omini\" : \"/home/martina.miliani/causal_inference/explicit_bridges/acceptability/model_res_outlines/fewshot/accept_res_outlines_gpt-4o-mini_few_cleaned.csv\",\n",
+    "    \"gpt4omini\" : \"../data/res/acceptability/fewshot/accept_res_outlines_gpt-4o-mini_few_cleaned.csv\",\n",
     "\"gpt4o\" : \"../data/res/acceptability/fewshot/accept_res_outlines_gpt-4o_few_cleaned.tsv\",    \n",
     "\"falcon\" : \"../data/res/acceptability/fewshot/accept_res_outlines_falcon-7b-instruct_cleaned.tsv\",\n",
     "\"gemma\" : \"../data/res/acceptability/fewshot/accept_res_outlines_gemma-2-9b-it_cleaned.tsv\",\n",
